[gd_scene load_steps=50 format=3 uid="uid://dm2whrfs4t2gf"]

[ext_resource type="Script" uid="uid://jcgok7c3w0eq" path="res://scripts/r_game.gd" id="1_vdclo"]
[ext_resource type="Texture2D" uid="uid://k815sqnqrbpg" path="res://Sprites/32circle.png" id="2_1lepj"]
[ext_resource type="Script" uid="uid://c6yx5j1psamix" path="res://scripts/player.gd" id="3_rpxxd"]
[ext_resource type="Script" uid="uid://bpgdtgjlgq8lo" path="res://scripts/texture_progress_bar.gd" id="5_a3i0e"]
[ext_resource type="Texture2D" uid="uid://d3wk7koh5x0hn" path="res://Sprites/sPlayer.png" id="5_ariif"]
[ext_resource type="Script" uid="uid://cn5gfmxw4c3yt" path="res://scripts/meteor_spawner.gd" id="6_3w7uf"]
[ext_resource type="Shader" uid="uid://dfe76k56ujk1d" path="res://shaders/fix.gdshader" id="6_hutln"]
[ext_resource type="FontFile" uid="uid://0v7x8i437x5i" path="res://fonts/pixel.ttf" id="6_sh26x"]
[ext_resource type="Script" uid="uid://btcf5klrgmxa3" path="res://scripts/muzzle_meteor.gd" id="7_1lepj"]
[ext_resource type="Script" uid="uid://njhmg8qdmjba" path="res://scripts/points_text.gd" id="7_ariif"]
[ext_resource type="Script" uid="uid://d4jw35bia2ny7" path="res://scripts/boundary.gd" id="9_rpxxd"]
[ext_resource type="Texture2D" uid="uid://db68drhbssvnf" path="res://Sprites/waveBackground.png" id="12_3w7uf"]
[ext_resource type="Script" uid="uid://drykxf0m5g0q6" path="res://scripts/wave_text.gd" id="13_i4nr1"]
[ext_resource type="Script" uid="uid://c2h8kpc76oi2a" path="res://scenes/rooms/nine_patch_rect.gd" id="14_ijb5p"]
[ext_resource type="Script" uid="uid://c75coiyeq8k6p" path="res://scripts/camera_2d.gd" id="15_hutln"]
[ext_resource type="Shader" uid="uid://dyoyb3lncle2a" path="res://shaders/vignette.gdshader" id="17_tiwvj"]
[ext_resource type="Shader" uid="uid://sisn2poemume" path="res://shaders/blur.gdshader" id="19_eo355"]
[ext_resource type="Script" uid="uid://bbnd4i2pb0spo" path="res://scripts/pause_controller.gd" id="19_tgmq2"]
[ext_resource type="Script" uid="uid://bacs6jpxrgy24" path="res://scripts/buttonScripts/buttonGeneral.gd" id="20_eo355"]
[ext_resource type="Script" uid="uid://dc4d6c5b23djb" path="res://scripts/buttonScripts/resume_button.gd" id="21_kbtag"]
[ext_resource type="Script" uid="uid://bmk0sw5egpixk" path="res://scripts/buttonScripts/quit_button.gd" id="22_pgve5"]

[sub_resource type="Gradient" id="Gradient_vae2y"]
offsets = PackedFloat32Array(0.004310345, 0.5948276, 1)
colors = PackedColorArray(0.0026324103, 0.0026324103, 0.0026324103, 0.6, 0.91351753, 0.91351753, 0.91351753, 1, 1, 1, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ariif"]
line_spacing = 2.5
font = ExtResource("6_sh26x")
font_size = 5
shadow_size = 0
shadow_offset = Vector2(0, 0)

[sub_resource type="Gradient" id="Gradient_1o34b"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0.0885599, 0.08855992, 0.08855987, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_tiwvj"]
gradient = SubResource("Gradient_1o34b")
width = 30
height = 2

[sub_resource type="Gradient" id="Gradient_tgmq2"]
colors = PackedColorArray(1.1310726e-06, 0.63421637, 9.62615e-07, 1, 0, 0.63529414, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_eo355"]
gradient = SubResource("Gradient_tgmq2")
width = 30
height = 2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rrghp"]
size = Vector2(8, 8)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_a3i0e"]
shader = ExtResource("6_hutln")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_value = 0.0
shader_parameter/alpha_value = 1.0

[sub_resource type="Animation" id="Animation_a3i0e"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material:shader_parameter/flash_value")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../../Camera2D/vignetteLayer/vignette:material:shader_parameter/vignette_strength")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_hutln"]
resource_name = "damage"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material:shader_parameter/flash_value")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2.0333333, 2.5333333, 3, 3.5, 4, 4.5),
"transitions": PackedFloat32Array(1000000, 1000000, 1000000, 1000000, 1000000, 1000000, 1000000, 1000000, 1000000, 1000000),
"update": 0,
"values": [1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0, 1.0, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.2, 1.2), Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../../Camera2D/vignetteLayer/vignette:material:shader_parameter/vignette_strength")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4, 4.5, 5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.2, 0.0, 0.2, 0.0, 0.2, 0.0, 0.2, 0.0, 0.2, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1o34b"]
_data = {
&"RESET": SubResource("Animation_a3i0e"),
&"damage": SubResource("Animation_hutln")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sh26x"]
size = Vector2(448, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ariif"]
size = Vector2(448, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3w7uf"]
size = Vector2(8, 328)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i4nr1"]
size = Vector2(8, 328)

[sub_resource type="FontVariation" id="FontVariation_i4nr1"]
base_font = ExtResource("6_sh26x")
variation_embolden = 0.25

[sub_resource type="LabelSettings" id="LabelSettings_3w7uf"]
line_spacing = 2.5
font = SubResource("FontVariation_i4nr1")
font_size = 8
shadow_color = Color(0.34781694, 0.34781697, 0.3478169, 0.09411765)
shadow_offset = Vector2(0.5, 0.5)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tgmq2"]
resource_local_to_scene = true
shader = ExtResource("17_tiwvj")
shader_parameter/inner_radius = 0.2
shader_parameter/outer_radius = 1.0
shader_parameter/vignette_strength = 0.0
shader_parameter/dither_strength = 0.03
shader_parameter/vignette_color = Color(0.95, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tiwvj"]
shader = ExtResource("19_eo355")
shader_parameter/lod = 0.0

[sub_resource type="Animation" id="Animation_tgmq2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../pauseText:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(116, -22)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Control/quitButton:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Control/resumeButton:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Control/resumeButton:disabledAlpha")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../Control/quitButton:disabledAlpha")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_eo355"]
resource_name = "in"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.23333333),
"transitions": PackedFloat32Array(0.5358868, 26.908686),
"update": 0,
"values": [0.0, 1.0000000475]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../pauseText:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.49),
"transitions": PackedFloat32Array(0.17677669, 19.698307),
"update": 0,
"values": [Vector2(116, -22), Vector2(116, 29)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"pause"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Control/resumeButton:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Control/quitButton:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../Control/quitButton:disabledAlpha")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.09),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../Control/resumeButton:disabledAlpha")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.09),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="Animation" id="Animation_ijb5p"]
resource_name = "out"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.3, 0.49),
"transitions": PackedFloat32Array(0.20306301, 8.282116),
"update": 0,
"values": [1.0000000475, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../pauseText:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.39999998),
"transitions": PackedFloat32Array(3.605001, 0.8122529),
"update": 0,
"values": [Vector2(116, 29), Vector2(116, -22)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.33333334),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"unpause"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Control/resumeButton:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Control/quitButton:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../Control/quitButton:disabledAlpha")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.249, 0.33199394),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../Control/resumeButton:disabledAlpha")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.249, 0.33199394),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kbtag"]
_data = {
&"RESET": SubResource("Animation_tgmq2"),
&"in": SubResource("Animation_eo355"),
&"out": SubResource("Animation_ijb5p")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_eo355"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ijb5p"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kbtag"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pgve5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ll64c"]

[node name="RGame" type="Node2D"]
script = ExtResource("1_vdclo")

[node name="pausable" type="Node2D" parent="."]
process_mode = 1

[node name="stars" type="Node2D" parent="pausable"]

[node name="Stars" type="CPUParticles2D" parent="pausable/stars"]
position = Vector2(336, 89.00001)
scale = Vector2(0.006041211, 0.78060913)
amount = 500
texture = ExtResource("2_1lepj")
lifetime = 110.0
speed_scale = 5.0
lifetime_randomness = 0.55
fixed_fps = 30
draw_order = 1
emission_shape = 3
emission_rect_extents = Vector2(1, 150)
direction = Vector2(-100, 0)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 650.0
initial_velocity_max = 750.0
scale_amount_min = 0.0
scale_amount_max = 0.03
color_initial_ramp = SubResource("Gradient_vae2y")

[node name="Stars2" type="CPUParticles2D" parent="pausable/stars"]
position = Vector2(162, 94)
scale = Vector2(0.006125344, 0.7733686)
emitting = false
amount = 700
texture = ExtResource("2_1lepj")
lifetime = 110.0
one_shot = true
speed_scale = 5.0
explosiveness = 1.0
lifetime_randomness = 0.55
fixed_fps = 30
emission_shape = 3
emission_rect_extents = Vector2(30000.03, 150)
direction = Vector2(-100, 0)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 650.0
initial_velocity_max = 700.0
scale_amount_min = 0.0
scale_amount_max = 0.03
color_initial_ramp = SubResource("Gradient_vae2y")

[node name="PointsText" type="Label" parent="pausable"]
z_index = 2
offset_left = 129.0
offset_top = 75.0
offset_right = 186.0
offset_bottom = 86.0
text = "0 Points"
label_settings = SubResource("LabelSettings_ariif")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("7_ariif")

[node name="healthBar" type="TextureProgressBar" parent="pausable"]
z_index = 2
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 142.0
offset_top = 83.0
offset_right = 206.0
offset_bottom = 147.0
grow_horizontal = 2
grow_vertical = 2
max_value = 3.0
step = 0.0
value = 3.0
texture_under = SubResource("GradientTexture2D_tiwvj")
texture_progress = SubResource("GradientTexture2D_eo355")
script = ExtResource("5_a3i0e")

[node name="Player" type="CharacterBody2D" parent="pausable"]
z_index = 1
position = Vector2(156, 95)
collision_layer = 0
motion_mode = 1
script = ExtResource("3_rpxxd")

[node name="Collision" type="CollisionShape2D" parent="pausable/Player"]
shape = SubResource("RectangleShape2D_rrghp")

[node name="Sprite" type="Sprite2D" parent="pausable/Player"]
texture_filter = 1
material = SubResource("ShaderMaterial_a3i0e")
texture = ExtResource("5_ariif")

[node name="AnimationPlayer" type="AnimationPlayer" parent="pausable/Player/Sprite"]
libraries = {
&"": SubResource("AnimationLibrary_1o34b")
}

[node name="Muzzle" type="Marker2D" parent="pausable/Player"]
position = Vector2(7, 0)

[node name="Area2D" type="Area2D" parent="pausable/Player"]

[node name="Collision" type="CollisionShape2D" parent="pausable/Player/Area2D"]
shape = SubResource("RectangleShape2D_rrghp")

[node name="MeteorSpawner" type="Node2D" parent="pausable"]
script = ExtResource("6_3w7uf")

[node name="MuzzleMeteor1" type="Marker2D" parent="pausable/MeteorSpawner"]
position = Vector2(-16, -16)
script = ExtResource("7_1lepj")

[node name="MuzzleMeteor2" type="Marker2D" parent="pausable/MeteorSpawner"]
position = Vector2(160, -16)
script = ExtResource("7_1lepj")

[node name="MuzzleMeteor3" type="Marker2D" parent="pausable/MeteorSpawner"]
position = Vector2(336, -16)
script = ExtResource("7_1lepj")

[node name="MuzzleMeteor4" type="Marker2D" parent="pausable/MeteorSpawner"]
position = Vector2(336, 90)
script = ExtResource("7_1lepj")

[node name="MuzzleMeteor5" type="Marker2D" parent="pausable/MeteorSpawner"]
position = Vector2(336, 196)
script = ExtResource("7_1lepj")

[node name="MuzzleMeteor6" type="Marker2D" parent="pausable/MeteorSpawner"]
position = Vector2(160, 196)
script = ExtResource("7_1lepj")

[node name="MuzzleMeteor7" type="Marker2D" parent="pausable/MeteorSpawner"]
position = Vector2(-16, 196)
script = ExtResource("7_1lepj")

[node name="MuzzleMeteor8" type="Marker2D" parent="pausable/MeteorSpawner"]
position = Vector2(-16, 90)
script = ExtResource("7_1lepj")

[node name="boundary" type="Node2D" parent="pausable"]

[node name="Top" type="Area2D" parent="pausable/boundary"]
script = ExtResource("9_rpxxd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="pausable/boundary/Top"]
position = Vector2(160, -68)
shape = SubResource("RectangleShape2D_sh26x")

[node name="Bottom" type="Area2D" parent="pausable/boundary"]
script = ExtResource("9_rpxxd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="pausable/boundary/Bottom"]
position = Vector2(160, 252)
shape = SubResource("RectangleShape2D_ariif")

[node name="Left" type="Area2D" parent="pausable/boundary"]
script = ExtResource("9_rpxxd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="pausable/boundary/Left"]
position = Vector2(-68, 92)
shape = SubResource("RectangleShape2D_3w7uf")

[node name="Right" type="Area2D" parent="pausable/boundary"]
script = ExtResource("9_rpxxd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="pausable/boundary/Right"]
position = Vector2(388, 92)
shape = SubResource("RectangleShape2D_i4nr1")

[node name="Camera2D" type="Camera2D" parent="pausable"]
position = Vector2(160, 90)
script = ExtResource("15_hutln")

[node name="NinePatchRect" type="NinePatchRect" parent="pausable/Camera2D"]
z_index = 5
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.0
offset_top = -139.0
offset_right = 30.0
offset_bottom = -74.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(30, 0)
texture = ExtResource("12_3w7uf")
region_rect = Rect2(7, 0, 52, 19)
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
script = ExtResource("14_ijb5p")

[node name="waveText" type="Label" parent="pausable/Camera2D/NinePatchRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -27.0
offset_top = 19.5
offset_right = 30.0
offset_bottom = 30.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(28, 5)
text = "Wave 1"
label_settings = SubResource("LabelSettings_3w7uf")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("13_i4nr1")

[node name="vignetteLayer" type="CanvasLayer" parent="pausable/Camera2D"]

[node name="vignette" type="ColorRect" parent="pausable/Camera2D/vignetteLayer"]
material = SubResource("ShaderMaterial_tgmq2")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="pauseController" type="Node2D" parent="."]
z_index = 15
script = ExtResource("19_tgmq2")

[node name="pauseLayer" type="CanvasLayer" parent="pauseController"]

[node name="ColorRect" type="ColorRect" parent="pauseController/pauseLayer"]
material = SubResource("ShaderMaterial_tiwvj")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="pauseController/pauseLayer/ColorRect"]
libraries = {
&"": SubResource("AnimationLibrary_kbtag")
}

[node name="pauseText" type="Label" parent="pauseController/pauseLayer"]
offset_left = 116.0
offset_top = -22.0
offset_right = 209.0
offset_bottom = 0.9999809
pivot_offset = Vector2(43, 0)
theme_override_fonts/font = ExtResource("6_sh26x")
text = "--PAUSED--"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="pauseController/pauseLayer"]
layout_mode = 3
anchors_preset = 0
offset_left = 142.0
offset_top = 75.0
offset_right = 182.0
offset_bottom = 115.0

[node name="resumeButton" type="Button" parent="pauseController/pauseLayer/Control"]
layout_mode = 0
offset_top = 2.0
offset_right = 40.0
offset_bottom = 12.0
pivot_offset = Vector2(20, 5)
theme_override_colors/font_color = Color(0.52114034, 0.52114064, 0.5211405, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.38928655, 0.38928664, 0.3892865, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(0.3882353, 0.3882353, 0.3882353, 1)
theme_override_colors/font_disabled_color = Color(0.88, 0.88, 0.88, 0)
theme_override_fonts/font = ExtResource("6_sh26x")
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = SubResource("StyleBoxEmpty_eo355")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ijb5p")
theme_override_styles/hover = SubResource("StyleBoxEmpty_kbtag")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_pgve5")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ll64c")
disabled = true
text = "Resume"
flat = true
script = ExtResource("20_eo355")
mainButton = true
disabledAlpha = 0.0
actionScript = ExtResource("21_kbtag")

[node name="quitButton" type="Button" parent="pauseController/pauseLayer/Control"]
layout_mode = 0
offset_top = 16.0
offset_right = 40.0
offset_bottom = 26.0
pivot_offset = Vector2(20, 5)
theme_override_colors/font_color = Color(0.52114034, 0.52114064, 0.5211405, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.38928655, 0.38928664, 0.3892865, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(0.3882353, 0.3882353, 0.3882353, 1)
theme_override_colors/font_disabled_color = Color(0.88, 0.88, 0.88, 0)
theme_override_fonts/font = ExtResource("6_sh26x")
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = SubResource("StyleBoxEmpty_eo355")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ijb5p")
theme_override_styles/hover = SubResource("StyleBoxEmpty_kbtag")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_pgve5")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ll64c")
disabled = true
text = "Quit"
flat = true
script = ExtResource("20_eo355")
disabledAlpha = 0.0
actionScript = ExtResource("22_pgve5")

[connection signal="body_entered" from="pausable/Player/Area2D" to="pausable/Player" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="pausable/Player/Area2D" to="pausable/Player" method="_on_area_2d_body_exited"]
[connection signal="area_entered" from="pausable/boundary/Top" to="pausable/boundary/Top" method="_on_area_entered"]
[connection signal="body_entered" from="pausable/boundary/Top" to="pausable/boundary/Top" method="_on_body_entered"]
[connection signal="area_entered" from="pausable/boundary/Bottom" to="pausable/boundary/Bottom" method="_on_area_entered"]
[connection signal="body_entered" from="pausable/boundary/Bottom" to="pausable/boundary/Bottom" method="_on_body_entered"]
[connection signal="area_entered" from="pausable/boundary/Left" to="pausable/boundary/Left" method="_on_area_entered"]
[connection signal="body_entered" from="pausable/boundary/Left" to="pausable/boundary/Left" method="_on_body_entered"]
[connection signal="area_entered" from="pausable/boundary/Right" to="pausable/boundary/Right" method="_on_area_entered"]
[connection signal="body_entered" from="pausable/boundary/Right" to="pausable/boundary/Right" method="_on_body_entered"]
